--- a/portfolio/portfolio/package.json
+++ b/portfolio/portfolio/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-scroll": "^1.8.9"
+    "react-rating": "^2.0.5",
+    "react-scroll": "^1.8.9",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
