--- a/portfolio/portfolio/package.json
+++ b/portfolio/portfolio/package.json
@@ -13,9 +13,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-particles": "^2.10.1",
     "react-rating": "^2.0.5",
     "react-scroll": "^1.8.9",
-    "swiper": "^9.4.1"
+    "react-text-transition": "^3.1.0",
+    "swiper": "^9.4.1",
+    "tsparticles": "^2.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
