--- a/portfolio/portfolio/package.json
+++ b/portfolio/portfolio/package.json
@@ -17,6 +17,7 @@
     "react-particles": "^2.10.1",
     "react-rating": "^2.0.5",
     "react-scroll": "^1.8.9",
+    "react-simple-typewriter": "^5.0.1",
     "react-text-transition": "^3.1.0",
     "swiper": "^9.4.1",
     "tsparticles": "^2.10.1"
