--- a/portfolio/portfolio-second/package.json
+++ b/portfolio/portfolio-second/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
+    "react-simple-typewriter": "^5.0.1",
     "smooth-scrollbar": "^8.8.4",
     "sort-by": "^1.2.0"
   },
