--- a/portfolio/portfolio-second/package.json
+++ b/portfolio/portfolio-second/package.json
@@ -19,6 +19,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.14.0",
     "react-simple-typewriter": "^5.0.1",
     "smooth-scrollbar": "^8.8.4",
