--- a/portfolio/portfolio-second/package.json
+++ b/portfolio/portfolio-second/package.json
@@ -18,6 +18,7 @@
     "react-animated-numbers": "^0.16.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.10.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.14.0",
