--- a/portfolio/portfolio-second/package.json
+++ b/portfolio/portfolio-second/package.json
@@ -14,14 +14,14 @@
     "aos": "^2.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
     "react-animated-numbers": "^0.16.0",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.10.1",
+    "react-parallax-tilt": "^1.7.151",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.14.0",
+    "react-scroll-parallax": "^3.4.2",
     "react-simple-typewriter": "^5.0.1",
     "smooth-scrollbar": "^8.8.4",
     "sort-by": "^1.2.0"
