--- a/portfolio/portfolio-second/package.json
+++ b/portfolio/portfolio-second/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@headlessui/react": "^1.7.15",
     "aos": "^2.3.4",
     "localforage": "^1.10.0",
@@ -24,7 +25,8 @@
     "react-scroll-parallax": "^3.4.2",
     "react-simple-typewriter": "^5.0.1",
     "smooth-scrollbar": "^8.8.4",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
