--- a/portfolio/portfolio-second/public/project.json
+++ b/portfolio/portfolio-second/public/project.json
@@ -23,8 +23,8 @@
 			"JWT"
 		],
 		"projectInfo": {
-			"orderDate": "24.12.2019",
-			"finalDate": "12.03.2020",
+			"orderDate": "14.06.2023",
+			"finalDate": "18.06.2023",
 			"status": "Completed"
 		},
 		"projectImages": {
@@ -66,12 +66,12 @@
 	{
 		"id": "mgpro_02",
 		"name": "Dancy!",
-		"description": "Support System is a Web Application. It can be used for office purposes. Where if User will face problem and he/she can't get out from here or Need authority help or permission then User can generate Ticket then Admin will say something to this User by sending Message to solve that problem. Any User can't get in Admin Route. Because I used JWT to secure Admin Route.",
+		"description": "Dancy is a Dance training website. Students can learn different types of dance with experience Instructors.",
 		"feture": [
-			"Two Route. One for User another for Admin. For Authentication I used Firebase",
-			"When User face any problem for there task then they can generate a Ticket to notify Admin. And then Admin will take action according to Ticket",
-			"Users can generate Three types of Tickets based on Priority. Like High, Medium and Low. If Ticket status is High it means this is emergency case",
-			"After notifying this problem Admin can send a Message to user what he/she have to do to solve this problem. Admin will be allow to see all user Ticket. But the User just will be able to see those Ticket that are he/she created"
+			"Three Route. One for Student, One for Instructor another for Admin. For Authentication I used Firebase",
+			"Instructors can add New Classes. When the Instructor adds a class then this class status will be Pending. And as long as the status is Pending no student can see this class. Just only can see Admin and Instructor. To take next action",
+			"Admin can Approve or Deny this class. If Admin Approved then this class will be published for all. If Admin deny then, Admin will send a message with denying this class why that class is Deny ",
+			"Admin can make someone Instructor to Admin. And Instructor can delete or edit just his/her classes"
 		],
 		"email": "Sincere@april.biz",
 		"techonology": [
@@ -84,11 +84,12 @@
 			"FIREBASE",
 			"AXIOS",
 			"TANSTACK QUERY",
-			"JWT"
+			"JWT",
+			"Strip"
 		],
 		"projectInfo": {
-			"orderDate": "24.12.2019",
-			"finalDate": "12.03.2020",
+			"orderDate": "06.06.2023",
+			"finalDate": "12.06.2023",
 			"status": "Completed"
 		},
 		"projectImages": {
@@ -101,14 +102,14 @@
 		},
 
 		"links": [
-			["Live Link", "https://support-system-d49af.web.app/"],
+			["Live Link", "https://twelve-assignment-95aeb.web.app/"],
 			[
 				"GitHub Server",
-				"https://github.com/mgrakib/support-portal-server"
+				"https://github.com/mgrakib/dancy-server"
 			],
 			[
 				"GitHub Client",
-				"https://github.com/mgrakib/support-portal-client"
+				"https://github.com/mgrakib/dancy-client"
 			]
 		],
 		"clientReviews": [
@@ -129,14 +130,13 @@
 		]
 	},
 	{
-		"id": "mgpro_01",
-		"name": "Support System",
-		"description": "Support System is a Web Application. It can be used for office purposes. Where if User will face problem and he/she can't get out from here or Need authority help or permission then User can generate Ticket then Admin will say something to this User by sending Message to solve that problem. Any User can't get in Admin Route. Because I used JWT to secure Admin Route.",
+		"id": "mgpro_03",
+		"name": "Kids Doy",
+		"description": "Kids Doy is an Online Toy Shop. You can buy your toy from here.",
 		"feture": [
 			"Two Route. One for User another for Admin. For Authentication I used Firebase",
-			"When User face any problem for there task then they can generate a Ticket to notify Admin. And then Admin will take action according to Ticket",
-			"Users can generate Three types of Tickets based on Priority. Like High, Medium and Low. If Ticket status is High it means this is emergency case",
-			"After notifying this problem Admin can send a Message to user what he/she have to do to solve this problem. Admin will be allow to see all user Ticket. But the User just will be able to see those Ticket that are he/she created"
+			"User can add toy to his/her cart. Then he can pay for this toy",
+			"Admin can add New toy, deleate existing Toy."
 		],
 		"email": "Sincere@april.biz",
 		"techonology": [
@@ -157,22 +157,22 @@
 			"status": "Completed"
 		},
 		"projectImages": {
-			"displayImage": "https://i.ibb.co/J5SLc65/image.png",
+			"displayImage": "https://i.ibb.co/XXyg4kD/display-kidsdoy.png",
 			"photoShowCase": [
-				"https://i.ibb.co/gDmhyvr/support-Dashboard-ful.png",
-				"https://i.ibb.co/3Rqy1P9/support-new-ticket.png",
-				"https://i.ibb.co/7tysd4c/support-ticket-response.png"
+				"https://i.ibb.co/F636f7y/kidsDoy.png",
+				"https://i.ibb.co/qRrRnFJ/kids-Doyadd-Toy.png",
+				"https://i.ibb.co/gTM86tK/alltoys.png"
 			]
 		},
 		"links": [
-			["Live Link", "https://support-system-d49af.web.app/"],
+			["Live Link", "https://assignment-eleven-b479b.web.app/"],
 			[
 				"GitHub Server",
-				"https://github.com/mgrakib/support-portal-server"
+				"https://github.com/mgrakib/kidsdoy-server"
 			],
 			[
 				"GitHub Client",
-				"https://github.com/mgrakib/support-portal-client"
+				"https://github.com/mgrakib/kidsdoy-client"
 			]
 		],
 		"clientReviews": [
